# custom-multi-agent

./: README.md
src/backend/: utils_kernel.py
src/backend/kernel_agents/: agent_factory.py  group_chat_manager.py  planner_agent.py
src/backend/models/: messages_kernel.py
src/frontend/: Dockerfile  pyproject.toml
src/frontend/src/models/: enums.tsx  homeInput.tsx
